# firmware-nordic-nrf52840dk-nrf5340dk

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Kconfig  README.md  prj.conf  sample.yaml
boards/: nrf52840dk_nrf52840.overlay  nrf5340dk_nrf5340_cpuapp.overlay
edge-impulse-sdk/CMSIS/DSP/Include/dsp/: utils.h
edge-impulse-sdk/classifier/: ei_model_types.h  ei_print_results.h  ei_run_dsp.h
edge-impulse-sdk/classifier/postprocessing/: ei_object_tracking_sort.h  ei_postprocessing.h  ei_postprocessing_thresholds.h
edge-impulse-sdk/classifier/postprocessing/alignment/: ei_alignment.hpp  rectangular_lsap.hpp
edge-impulse-sdk/porting/renesas-ra/: ei_classifier_porting.cpp
edge-impulse/ingestion-sdk-c/: ei_config.h  ei_config_types.h  ei_run_impulse.cpp  ei_run_impulse.h  ei_sampler.cpp  ei_sampler.h  sensor_aq.h  sensor_aq_mbedtls_hs256.cpp  sensor_aq_mbedtls_hs256.h  sensor_aq_none.h
edge-impulse/ingestion-sdk-platform/NordicSemi-nrf52/: ble_nus.cpp  ble_nus.h  ei_at_handlers.cpp  ei_at_handlers.h  ei_device_info.h  ei_device_nordic_nrf52.cpp  ei_device_nordic_nrf52.h  ei_main.cpp  ei_main.h  ei_zephyr_flash_commands.cpp  ei_zephyr_flash_commands.h
edge-impulse/ingestion-sdk-platform/NordicSemi-nrf52/sensors/: ei_fusion_sensors_config.h  ei_inertialsensor.cpp  ei_inertialsensor.h  ei_microphone.cpp  ei_microphone.h  lsm303agr_reg.cpp  lsm303agr_reg.h
edge-impulse/mbedtls_hmac_sha256_sw/: ei_mbedtls_md.h
edge-impulse/mbedtls_hmac_sha256_sw/mbedtls/src/: hmac_drbg.c
edge-impulse/repl/: at_base64.h  at_cmd_interface.h  at_cmds.h  repl.cpp  repl.h
ei-model/edge-impulse-sdk/CMSIS/DSP/Include/dsp/: none.h
ei-model/edge-impulse-sdk/porting/: ei_classifier_porting.h
firmware-sdk/: ei_device_lib.cpp  ei_device_memory.h  ei_fusion.cpp
firmware-sdk/at-server/: ei_at_command_set.h  ei_at_server.cpp  ei_at_server.h
model-parameters/: anomaly_clusters.h  anomaly_metadata.h  dsp_blocks.h  model_metadata.h  model_variables.h
src/: main.cpp
tflite-model/: tflite_learn_3_compiled.cpp  tflite_learn_3_compiled.h  tflite_learn_7_compiled.cpp  tflite_learn_7_compiled.h  trained_model_compiled.cpp  trained_model_compiled.h  trained_model_ops_define.h
